# CirculaWeb

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEVELOP.md  README.md  compose.override.yml  compose.traefik.yml  compose.yml  package-lock.json  package.json  railway.json  railway.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: backend_pre_start.py  initial_data.py  main.py  utils.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 287911cc58ce_allow_multiple_producers_per_user.py  2da1b6111828_add_sectors_producers.py  3bcb427c6556_initial.py  44468f6d80d7_add_scheduled_at_and_calendar_id.py  6578fd6abf97_add_contact_requests.py  7ca767f8cea5_producer_obligations_store_uuids.py  8f3c91a2b4d0_sectors_producers_uuid_pk.py  9f1b1cff3bf2_add_plan_type_company_nit_phone_invite_.py  a1f2e3d4c5b6_add_impact_metrics.py  aff273902683_add_scheduled_at_calendar_event_id_to_.py  b37c54b2dfde_add_other_sector_producers.py  b4771b72f391_persistent_contact_form_requests.py  c9efc60db78e_producer_obligations_relation.py  d0420c3d8f4e_add_normative_obligations.py  fcfe6374e465_modify_add_contact_requests.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  login.py  (+5 more)
backend/app/core/: config.py  google_calendar.py  init_minio.py  login_limiter.py  messages.py  redis.py  security.py
backend/app/crud/: contact_request.py  producer.py  sector.py  user.py
backend/app/db/: session.py
backend/app/models/: __init__.py  base.py  contact_request.py  impact_metric.py  obligation.py  producer.py  sector.py  user.py
backend/app/schemas/: contact.py  impact_metric.py  rep.py  token.py  user.py
backend/scripts/: start.sh
(+1182 files in other folders)
